[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
crate-type = ["staticlib"]
bench = false
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flipperzero = "0.1.0"
flipperzero-sys = "0.1.0"

[profile.release]
opt-level = "z"
panic = "abort"
